fix getall measurtments
